# VectorBid

./: .cursorignore  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .replit  AI_DEMO_SCENARIOS.md  AI_FEATURE_SHOWCASE.md  AI_MARKETING_CONTENT.html  BRANCH_CLOSURE_PLAN.md  CHANGES.md  CLEANUP_LOG.md  CLEANUP_SUMMARY.md  CLINE_HANDOFF_PHASE1.md  CLINE_HANDOFF_QUICKFIX.md  CODEX_INTEGRATION_STATUS.md  CONTEXT_PIN.md  CURSOR_HANDOFF_PHASE1.md  CURSOR_HANDOFF_PHASE1_CORE.md  CURSOR_HANDOFF_PHASE2.md  CURSOR_HANDOFF_PHASE3B.md  CURSOR_HANDOFF_UI_PHASE1.md  CURSOR_QUICKFIX_API_PATHS.md  DEVELOPER_QUICKSTART.md  DEVELOPMENT_STATUS.md  Dockerfile  GIT_WORKFLOW.md  IMPLEMENTATION_ROADMAP.md  IMPROVEMENT_SUMMARY.md  LLM_FIRST_INTEGRATION_PLAN.md  LLM_OPTIMIZATION_GUIDE.md  LLM_SETUP_GUIDE.md  MERGE_COMPLETION_REPORT.md  MERGE_STRATEGY_CODEX_VS_CURSOR.md  MVP_REALITY_CHECK.md  Makefile  PAGE_CONTENT_SPECIFICATIONS.md  PHASE3_PARALLEL_PLAN.md  README-API.md  README-CI-CD.md  (+121 more)
.github/: pull_request_template.md
.github/workflows/: build.yml  ci  ci-cd.yml  ci-staging.yml  ci.yml  perf.yml  rulepack.yml  smoke.yml  test.yml  tests.yml
alembic/: env.py
alembic/versions/: 0001_create_audit_tables.py
app/: __init__.py  audit.py  enhanced_models.py  fastapi_main.py  logging_utils.py  main.py  main.py.backup  middleware.py  models.py
app/analytics/: __init__.py  probability.py
app/api/: routes.py
app/auth/: dependencies.py
app/client/: README.md  pyproject.toml
app/compat/: validate_router.py
app/content/: faq.en.json
app/context/: __init__.py  enrich.py
app/db/: __init__.py  database.py  models.py  session.py
app/explain/: __init__.py  legal.py
app/export/: audit.py  storage.py
app/fusion/: __init__.py  fusion.py
app/generate/: __init__.py  layers.py  lint.py
app/ingestion/: __init__.py  packet.py
app/legacy/: mount.py
app/legality/: __init__.py  validate.py
app/models/: enhanced.py
app/opt/: __init__.py  beam.py
app/optimize/: __init__.py  optimizer.py
app/orchestrator/: __init__.py  run.py
app/parsers/: ual_pdf.py
app/pbs/: export.py  lint.py
app/routes/: admin_contracts.py  auth.py  contracts.py  db_viewer.py  faq.py  ingestion.py  marketing.py  meta.py  ops.py  pilot_contracts.py  products.py  rule_packs.py  solutions.py  ui.py
app/rules/: __init__.py  (+3 more)
archive/: check_dependencies.py  llm_integration_patch.py  main.py  migrate_database.py  openapi.json  validate_openapi.py
attached_assets/: Pasted-Here-s-the-Agent-Mode-handoff-brief-VectorBid-Agent-Run-Fix-lint-rule-packs-make-CI-green-1755482858261_1755482858261.txt  Pasted-Replit-Ghostwriter-Prompt-Auto-Test-Polish-Every-UI-Flow-You-are-the-project-s-autonomou-1753935634483_1753935634484.txt  Pasted-You-are-a-senior-FastAPI-frontend-engineer-working-on-VectorBid-in-branch-feat-replit-agent-Codex-1755496689248_1755496689248.txt  Pasted-You-are-the-project-s-autonomous-QA-refactor-bot-Your-mission-turn-the-current-Pilot-Bidding-Ass-1753935656929_1753935656929.txt
backup_20250731/: admin.py  app.py  replit_auth.py  routes.py  test_api.py  test_onboarding.py  validate_openapi.py
backup_routes_20250814_162126/: admin.py
backup_ui_20250814_152038/: __init__.py
backup_ui_20250814_161241/: README.md
components/: Benefits.tsx  CTA.tsx  FAQ.tsx  Footer.tsx  Hero.tsx  HeroV2.tsx  HowItWorks.tsx  LeadForm.tsx  Logos.tsx  PersonaSelect.tsx  PreferencePreview.tsx  Pricing.tsx  ROISection.tsx  SettingsLayout.tsx  SettingsNav.tsx  Testimonials.tsx  WhatIfBar.tsx
contracts/: openapi.json
cursor-tasks/: 1-MOBILE-OPTIMIZATION.md  2-ERROR-HANDLING.md  3-PERFORMANCE-OPTIMIZATION.md  4-ACCESSIBILITY.md  5-TESTING-INFRASTRUCTURE.md  README.md
data/: subscriptions.json
database/: ARCHITECTURE.md  README.md  alembic.ini  docker-compose.yml  init-extensions.sql
demo/: end_to_end_ai_workflow.py  interactive_ai_showcase.html
docs/: AGENTS.md  AI_DEVELOPMENT_STRATEGY.md  API_ENDPOINTS.md  ARCHITECTURE.md  CONTRACT_EXTRACTION.md  DATA_CONTRACTS.md  DESIGN.md  DEVELOPER_QUICKSTART.md  DOCUMENTATION_STRATEGY.md  GIT_WORKFLOW.md  IMPLEMENTATION_SUMMARY.md  LEGACY.md  REFACTOR_SUMMARY.md  RULE_PACKS.md  TESTING.md  UI_FLOWS.md  architecture.txt  build_phase.txt
fastapi_tests/: test_candidate_rationale.py  test_export_audit.py  test_export_auth.py  test_export_hash_golden.py  test_export_storage.py  test_faq.py  test_ingest_route.py  test_logging_pii.py  test_meta.py  test_meta_routes.py  test_optimizer.py  test_parse_preview.py  test_parser_e2e.py  test_pr2_basic.py  test_rank_candidates.py  test_retune.py  test_rule_pack_api.py  test_rulepacks_nonempty.py  test_rules_engine.py  test_synth_generator.py
lib/: analytics.ts  consent.ts
pages/: faq.tsx  index.tsx  onboarding.tsx
schedule_parser/: __init__.py  csv_parser.py  pdf_parser.py  pdf_parser_backup.py  txt_parser.py
scripts/: apply_pr1_scaffold.sh  bench_10k.py  branch_inventory.sh  dev_run.sh  kill_uvicorn.sh  load_fixture.py  merge_batch.sh  merge_sweep.sh  migrate_bid_packets_airline.py  pre-commit-test.py  profile_optimize.py  queue_from_inventory.py  setup_dev_env.sh  smoke.sh  test-before-claim.py
services/: bids.py  db.py  db.py.backup
src/: __init__.py  environment_template.txt  setup_enhanced_integration.py
storage/: __init__.py
styles/: landing.module.css  settings.module.css
templates/: 403.html  how_to.html  index.html  onboarding.html  onboarding.html.backup  results.html  results.html.backup
tests/: conftest.py  test_admin.py  test_audit_logging.py  test_bid_packet_detection.py  test_dsl_parser.py  test_enhanced_health.py  test_health.py  test_legality_validate.py  test_models.py  test_optimizer_rule_integration.py  test_parser.py  test_pbs_export.py  test_pbs_lint.py  test_rule_pack_loading.py  test_rule_pack_management.py  test_rule_pack_management_fixed.py  test_rulepack_validate.py  test_rulepacks_placeholder.py  test_rules_engine.py  test_rules_merge.py  test_vslice_parse_validate_optimize.py  tests_meta.py
tools/: rulepack_validate.py
vb/: __init__.py  cli.py
welcome/: routes.py
(+308 files in other folders)
